# reddit-post-fetcher

./: .env.example  .gitignore  README.md  ai_services.py  api_server.py  pyproject.toml  reddit_fetcher.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: PostCard.tsx
frontend/src/components/ui/: badge.tsx  card.tsx  input.tsx  skeleton.tsx  slider.tsx  switch.tsx  toast.tsx  toaster.tsx  use-toast.tsx
frontend/src/lib/: utils.ts
